--- a/src/main/resources/com/shpakovskiy/soundanalyser/views/MainView.fxml
+++ b/src/main/resources/com/shpakovskiy/soundanalyser/views/MainView.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.control.ScrollBar?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane fx:controller="com.shpakovskiy.soundanalyser.controller.MainController"
+<BorderPane fx:controller="com.shpakovskiy.soundanalyser.controller.SignalViewController"
             xmlns:fx="http://javafx.com/fxml">
 
     <top>
@@ -31,12 +31,12 @@
     </center>
 
     <bottom>
-        <ScrollBar/>
+        <ScrollBar fx:id="signalViewScrollBar"  />
     </bottom>
 
 </BorderPane>
 
-        <!--<VBox fx:controller="com.shpakovskiy.soundanalyser.controller.MainController"-->
+        <!--<VBox fx:controller="com.shpakovskiy.soundanalyser.controller.SignalViewController"-->
         <!--      xmlns:fx="http://javafx.com/fxml">-->
 
         <!--    <MenuBar fx:id="appMenu">-->
