Add keyboard shortcuts support for precise scrolling

--- a/src/main/resources/com/shpakovskiy/soundanalyser/views/MainView.fxml
+++ b/src/main/resources/com/shpakovskiy/soundanalyser/views/MainView.fxml
@@ -14,7 +14,7 @@
     <top>
         <MenuBar fx:id="appMenu">
             <Menu text="File">
-                <MenuItem text="Open" onAction="#onButtonOpenAction"/>
+                <MenuItem text="Open (⌘O)" onAction="#onButtonOpenAction" />
             </Menu>
         </MenuBar>
     </top>
