--- a/src/main/resources/com/shpakovskiy/soundanalyser/views/MainView.fxml
+++ b/src/main/resources/com/shpakovskiy/soundanalyser/views/MainView.fxml
@@ -1,39 +1,58 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.chart.LineChart?>
-<?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.chart.*?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ScrollBar?>
-<?import javafx.scene.layout.BorderPane?>
-
+<?import javafx.scene.layout.*?>
 <BorderPane fx:controller="com.shpakovskiy.soundanalyser.controller.SignalViewController"
             xmlns:fx="http://javafx.com/fxml">
 
     <top>
         <MenuBar fx:id="appMenu">
             <Menu text="File">
-                <MenuItem text="Open (⌘O)" onAction="#onButtonOpenAction" />
+                <MenuItem text="Open (⌘O)" onAction="#onButtonOpenAction"/>
             </Menu>
         </MenuBar>
     </top>
 
     <center>
-        <LineChart fx:id="signalView" animated="false">
-            <xAxis>
-                <NumberAxis prefWidth="Infinity" side="BOTTOM"/>
-            </xAxis>
-            <yAxis>
-                <NumberAxis prefHeight="Infinity" side="LEFT"/>
-            </yAxis>
-        </LineChart>
+        <GridPane prefHeight="Infinity" prefWidth="Infinity" alignment="CENTER">
+            <BarChart fx:id="signalView"
+                      animated="false"
+                      GridPane.hgrow="always"
+                      GridPane.vgrow="always"
+                      GridPane.columnIndex="0"
+                      GridPane.rowIndex="0">
+                <xAxis>
+                    <CategoryAxis prefHeight="20.0" prefWidth="Infinity" side="BOTTOM"/>
+                    <!--                    <NumberAxis prefWidth="Infinity" side="BOTTOM"/>-->
+                </xAxis>
+                <yAxis>
+                    <NumberAxis prefHeight="Infinity" side="LEFT" prefWidth="50.0"/>
+                </yAxis>
+            </BarChart>
+
+            <BarChart fx:id="spectrumView"
+                      animated="false"
+                      GridPane.hgrow="always"
+                      GridPane.vgrow="always"
+                      GridPane.columnIndex="0"
+                      GridPane.rowIndex="1">
+                <xAxis>
+                    <CategoryAxis prefHeight="20.0" prefWidth="Infinity" side="BOTTOM"/>
+                </xAxis>
+                <yAxis>
+                    <NumberAxis prefHeight="Infinity" side="LEFT" prefWidth="50.0"/>
+                </yAxis>
+            </BarChart>
+        </GridPane>
     </center>
 
     <bottom>
-        <ScrollBar fx:id="signalViewScrollBar"  />
+        <ScrollBar fx:id="signalViewScrollBar"/>
     </bottom>
-
 </BorderPane>
 
         <!--<VBox fx:controller="com.shpakovskiy.soundanalyser.controller.SignalViewController"-->
