--- a/src/main/resources/com/shpakovskiy/soundanalyser/views/MainView.fxml
+++ b/src/main/resources/com/shpakovskiy/soundanalyser/views/MainView.fxml
@@ -14,6 +14,9 @@
             <Menu text="File">
                 <MenuItem text="Open (⌘O)" onAction="#onButtonOpenAction"/>
             </Menu>
+            <Menu text="Signal">
+                <MenuItem text="Recognize source" onAction="#onButtonRecognizeSourceAction"/>
+            </Menu>
         </MenuBar>
     </top>
 
